--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Jeanette Kgabe
 author:
   name: Jeanette Kgabe
   email: jeanettekgabe@gmail.com
-logo: /images/j.jpg
+logo: /images/j_circle.jpg
 
 theme: jekyll-theme-minimal
